--- a/app/scss/_dataset-list.scss
+++ b/app/scss/_dataset-list.scss
@@ -8,41 +8,6 @@
     display: flex;
     flex-direction: column;
 
-    #dataset-list-filter {
-      padding: 13px 16px 4px 16px;
-      width: 100%;
-      display: flex;
-
-      .filter-input-container {
-        width: 30%;
-        max-width: 40%;
-        flex: 1;
-        display: flex;
-        position: relative;
-
-        input {
-          height: 40px;
-          width: 100%;
-          background: #e1e4e8;
-          border-radius: 4px;
-          padding: 2px 5px;
-          box-shadow: none;
-          border: 1px solid transparent;
-
-          &:focus {
-            outline: none;
-            border-color: $primary;
-          }
-        }
-
-        .close {
-          position: absolute;
-          right: 10px;
-          top: 10px;
-        }
-      }
-    }
-
     .list-picker-and-bulk-actions {
       display: flex;
       padding: 0 9px;
@@ -126,6 +91,41 @@
         position: relative;
         padding: 0;
       }
+    }
+  }
+}
+
+.filter-search-input {
+  padding: 13px 16px 4px 16px;
+  width: 100%;
+  display: flex;
+  
+  .filter-input-container {
+    width: 30%;
+    max-width: 40%;
+    flex: 1;
+    display: flex;
+    position: relative;
+
+    input {
+      height: 40px;
+      width: 100%;
+      background: #e1e4e8;
+      border-radius: 4px;
+      padding: 2px 5px;
+      box-shadow: none;
+      border: 1px solid transparent;
+
+      &:focus {
+        outline: none;
+        border-color: $primary;
+      }
+    }
+
+    .close {
+      position: absolute;
+      right: 10px;
+      top: 10px;
     }
   }
 }
