feat(NewDataset): attach body file to new dataset
adjust a number of aspects related to dataset creation:

* dragging a file over the collection view opens the NewDataset modal
  with the file picker populated
* NewDataset modal now requires a file picker, sets title based
  on inferred filename
* update api action to send a JSON dataset document instead of a
  qri param
* populate meta.title with title from NewDataset modal

A few behaviours need work. It'd be nice if the meta.title that was inferred removed underscores & whatnot. We've also lost import progress tracking, which I think should be re-added as transfer tracking events sent over websockets, but the backend currently doesn't do save progress, so this will have to wait

--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -350,3 +350,28 @@
 .view-mode-button-inactive {
   background: transparent;
 }
+
+.drop-picker-container {
+  width: 100%;
+
+  .drag-drop-picker {
+    width: 100%;
+    min-height: 60px;
+    padding: 15px;
+    background: $primary-light;
+    border-radius: 4px;
+    box-shadow: inset 0 0 3px #00000030;
+    text-align: center;
+    border: 1px solid $primary-muted;
+
+    &.dragging {
+      border: 1px solid $primary;
+    }
+
+    .label {
+      font-weight: normal;
+      color: #666;
+      margin-top: 10px;
+    }
+  }
+}
