feat(RenameDataset): add modal to rename dataset
Since we already had a pretty slick way to rename a dataset coded up in `DatasetReference` , I decided to just generalize/add functionality that would allow us to use the `DatasetReferenceComponent` as a part of the `RenameModal`. This involved adding optional functions that could inject additional functionality at key points: when the dataset was marked valid/invalid, when the user made any change to the text. The `onSubmit` function became optional, if you add an `onSubmit` function it will submit when the user hits `enter`, otherwise, you control the submitting outside of the component, which is exactly what we do now in the `RenameDataset` modal: we use the `onChange` function to keep track of what the user is typing, and the `isValid` component to keep track of any errors, displaying them to the user.

We've also added the `RenameDataset` modal to storybook.

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -233,44 +233,6 @@ $header-font-size: .9rem;
       font-size: 1.2rem;
       font-weight: 900;
     }
-
-    .dataset-reference {
-      font-size: 1.05rem;
-      display: flex;
-      margin: 20px 20px 0 20px;
-    }
-
-    .dataset-name {
-
-      flex: 1;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-
-      input {
-        background-color: $primary-muted;
-        border: none;
-        border-radius: 5px;
-        color: black;
-        padding: 0 5px;
-        outline: none;
-        width: 100%;
-        transition: background 0.2s;
-
-        &.invalid {
-          background: #F43535;
-        }
-
-      }
-
-      &:hover {
-        &.no-pointer {
-          cursor: default;
-        }
-        cursor: pointer;
-        text-decoration: underline;
-      }
-    }
   }
 
   #list {
@@ -356,6 +318,47 @@ $header-font-size: .9rem;
   label {
     padding: 20px;
     text-transform: capitalize;
+  }
+}
+
+
+#dataset-reference {
+  .dataset-reference {
+    font-size: 1.05rem;
+    display: flex;
+    margin: 20px 20px 0 20px;
+  }
+
+  .dataset-name {
+
+    flex: 1;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+
+    input {
+      background-color: $primary-muted;
+      border: none;
+      border-radius: 5px;
+      color: black;
+      padding: 0 5px;
+      outline: none;
+      width: 100%;
+      transition: background 0.2s;
+
+      &.invalid {
+        background: #F43535;
+      }
+
+    }
+
+    &:hover {
+      &.no-pointer {
+        cursor: default;
+      }
+      cursor: pointer;
+      text-decoration: underline;
+    }
   }
 }
 
