fix: numerous tweaks & tuning
* Pull Dataset Modal: “Pull Dataset”
* Pull Dataset Modal: “Pull"
* Commit message placeholder: “Add a message"
* Decrease size Export Modal Section "format" header
* Change nav sidebar icon for collection to `faListUL`
* Navbar Tooltips: "Collection - Manage Local Datasets" & "Network - Find and Pull Datasets"
* prevent selecting text in Navbar
* prevent selecting text in nav topbar
* bump z-index of transfers menu
* refactor `Modal` component to match `ModalHeader` import name

--- a/app/scss/_modal.scss
+++ b/app/scss/_modal.scss
@@ -52,6 +52,11 @@ height: 100%;
     width: 100%;
     border-radius: 3px;
 	}
+	.section-title {
+		font-size: 15px;
+		font-weight: normal;
+	}
+
 	.mode-picker {
 		.mode-item {
 			padding: 10px 5px;
