refactor(DatasetReference): adjust to optionally look like a traditional input
using the `inline={false}` will make the component look like a typical input form. The default is to still like normal text until clicked.

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -336,7 +336,7 @@ $header-font-size: .9rem;
     text-overflow: ellipsis;
     overflow: hidden;
 
-    input {
+    .inline-input {
       background-color: $primary-muted;
       border: none;
       border-radius: 5px;
@@ -349,7 +349,12 @@ $header-font-size: .9rem;
       &.invalid {
         background: #F43535;
       }
+    }
 
+    input {
+      &.invalid {
+        border: solid 1px #F43535;
+      }
     }
 
     &:hover {
