feat(Transfers): persist transfers after completion
* completed transfers also link to their respective dataset.
* moved transfer & websocket event constants into the right places
* updated the transfers Storybook, and a few quick fixes to keep storybook operating
* updated tests

--- a/app/scss/_transfers.scss
+++ b/app/scss/_transfers.scss
@@ -66,6 +66,9 @@
     .item {
       padding: 10px 20px 10px 15px;
       border-bottom: 1px solid #eee;
+      &.complete {
+        cursor: pointer;
+      }
 
       .icon {
         height: 100%;
@@ -85,6 +88,9 @@
         overflow: hidden;
         font-size: 13px;
         font-weight: bold;
+      }
+      .complete {
+        font-size: 12px;
       }
     }
 
