fix(Remove): adjust to remove modal expectations
also adjust sizing of dialog `Error`

--- a/app/scss/_dialog.scss
+++ b/app/scss/_dialog.scss
@@ -175,6 +175,10 @@ dialog {
     overflow-wrap: normal;
     width: 90%;
     margin-bottom: $spacer;
+    
+    &.sm {
+      font-size: small;
+    }
   }
 
   .buttons {
