refactor(headerButtons): adjust styling

--- a/app/scss/0.4.0/chrome.scss
+++ b/app/scss/0.4.0/chrome.scss
@@ -193,6 +193,18 @@
           pointer-events: none;
         }
       }
+      &:first-child {
+        &:hover {
+          border-top-left-radius: 6px;
+          border-top-right-radius: 6px;
+        }
+      }
+      &:last-child {
+        &:hover {
+          border-bottom-left-radius: 6px;
+          border-bottom-right-radius: 6px;
+        }
+      }
     }
   }
 }
