feat(`StatDiff`): component that shows the changes between two sets of stats

--- a/app/scss/0.4.0/item.scss
+++ b/app/scss/0.4.0/item.scss
@@ -91,12 +91,14 @@
 
     .delta {
       font-size: 12px;
+      font-weight: 300;
       color: green;
       &.light {
         color: rgb(63, 209, 63);
       }
       &.large {
         font-size: 14px;
+        font-weight: 400;
       }
       &.negative {
         color: $error;
