--- a/app/scss/_navbar.scss
+++ b/app/scss/_navbar.scss
@@ -171,7 +171,7 @@ $navbar-item-margin: 6px;
 
       .header-column {
         float: right;
-        padding: 10px 20px;
+        padding: 10px;
       }
     }
   }
